@@ -1,3 +1,4 @@
 debian/dh_sip3 usr/bin
+debian/sip3.pm usr/share/perl5/Debian/Debhelper/Sequence
 usr/include/python3.*/sip.h
 usr/lib/python3.*/dist-packages/sipdistutils.py
