@@ -1,0 +1,8 @@
+use warnings;
+use strict;
+
+use Debian::Debhelper::Dh_Lib;
+
+insert_before('dh_gencontrol', 'dh_sip3');
+
+1;
